--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "name": "TrejGun"
   },
   "dependencies": {
+    "@mikro-orm/core": "^4.5.7",
+    "@mikro-orm/nestjs": "^4.2.0",
+    "@mikro-orm/postgresql": "^4.5.7",
     "@nestjs/common": "7.6.15",
     "@nestjs/core": "7.6.15",
     "@nestjs/jwt": "7.2.0",
@@ -25,6 +28,7 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
+    "@mikro-orm/cli": "^4.5.7",
     "@nestjs/testing": "7.6.15",
     "@trejgun/eslint-config": "0.1.5",
     "@types/express": "4.17.11",
@@ -53,6 +57,13 @@
     "ts-node": "9.1.1",
     "tsc-watch": "4.2.9",
     "typescript": "4.2.4"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
   },
   "license": "MIT",
   "main": "./dist/index.js",
