--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   },
   "dependencies": {
     "@mikro-orm/core": "^4.5.7",
+    "@mikro-orm/migrations": "^4.5.7",
     "@mikro-orm/nestjs": "^4.2.0",
     "@mikro-orm/postgresql": "^4.5.7",
+    "@mikro-orm/reflection": "^4.5.7",
+    "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/common": "7.6.15",
     "@nestjs/core": "7.6.15",
     "@nestjs/jwt": "7.2.0",
